# geodesicSplines

./: .gitignore  .pre-commit-config.yaml  README.md  geo_shoot.py  geo_splines.py  geodesics.py  gizmo.py  pyproject.toml  requirements.txt  spline_export.py
.github/workflows/: ci.yml
docs/: REJECTED_SUGGESTIONS.md
tests/: test_hierarchical_order.py  test_parse_coordinates.py  test_session_format.py
